# CLogger

./: .gitignore  CLoggerConfig.cmake.in  CMakeLists.txt  README.md  build.sh
include/CLogger/: CLConfig.hpp  CLogSeverity.hpp  CLogger.hpp  CLoggerInstance.hpp  ClogConfig.hpp
src/: CLogConfig.cpp  CLogger.cpp  CLoggerInstance.cpp
